--- a/plugins/kronos/templates/admin_index.html
+++ b/plugins/kronos/templates/admin_index.html
@@ -1,7 +1,4 @@
 ^tmp_head^
-<script>
-    __vue_model = ^vue_model^;
-</script>
 <div class="container-fluid">
     ^tmp_admin=shared=admin_header^
     <div id="content-row" class="row">
@@ -17,7 +14,7 @@
             </div>
             <div class="well">
                 <h3>Cluster Health</h3>
-                <server-record-table v-bind:server-record-list="__vue_model.cluster"></server-record-table>
+                <server-record-table v-bind:server-record-list="cluster"></server-record-table>
             </div>
         </div>
     </div>
