--- a/plugins/kronos/templates/head.html
+++ b/plugins/kronos/templates/head.html
@@ -24,8 +24,11 @@
         <script type="text/javascript" src="^bootstrap_js_src^"></script>
 
         <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/vue-resource/0.1.13/vue-resource.min.js"></script>
+
         ^localization_script^
         ^analytics^
     </head>
     <body>
     <div id="kronosapp">
+        ^tmp_vue=model_binder^
