--- a/plugins/kronos/templates/vue/script_loader.html
+++ b/plugins/kronos/templates/vue/script_loader.html
@@ -1,3 +1,5 @@
 <script src="/public/kronos/vue/shared_components/admin_nav_bar.js"></script>
 <script src="/public/kronos/vue/shared_components/server_records.js"></script>
+<script src="/public/kronos/vue/users/login.js"></script>
+
 <script src="/public/kronos/vue/app.js"></script>
