--- a/plugins/kronos/templates/admin/shared/admin_header.html
+++ b/plugins/kronos/templates/admin/shared/admin_header.html
@@ -3,6 +3,6 @@
         <img src="/img/logo_menu.png">
     </div>
     <div class="col-sm-11">
-        <!-- Tab Nav -->
+        <pill-nav v-bind:pills="pills"></pill-nav>
     </div>
 </div>
