--- a/plugins/kronos/templates/admin_index.html
+++ b/plugins/kronos/templates/admin_index.html
@@ -2,11 +2,7 @@
 <div class="container-fluid">
     ^tmp_admin=shared=admin_header^
     <div id="content-row" class="row">
-        <div class="col-sm-3">
-            <div class="well">
-                <admin-nav-bar v-bind:item-list="adminNav"></admin-nav-bar>
-            </div>
-        </div>
+        ^tmp_admin=shared=admin_main_navigation^
         <div class="col-sm-9">
             <div class="well">
                 <h2>Pencilblue Statistics</h2>
