--- a/plugins/kronos/templates/vue/script_loader.html
+++ b/plugins/kronos/templates/vue/script_loader.html
@@ -1,3 +1,4 @@
+<script src="/public/kronos/vue/shared_components/filters.js"></script>
 <script src="/public/kronos/vue/shared_components/admin_nav_bar.js"></script>
 <script src="/public/kronos/vue/shared_components/admin_pill_nav.js"></script>
 <script src="/public/kronos/vue/shared_components/job_runner_modal.js"></script>
