--- a/plugins/kronos/templates/vue/script_loader.html
+++ b/plugins/kronos/templates/vue/script_loader.html
@@ -2,7 +2,14 @@
 <script src="/public/kronos/vue/shared_components/admin_nav_bar.js"></script>
 <script src="/public/kronos/vue/shared_components/admin_pill_nav.js"></script>
 <script src="/public/kronos/vue/shared_components/job_runner_modal.js"></script>
+<script src="/public/kronos/vue/shared_components/success_message.js"></script>
+<script src="/public/kronos/vue/shared_components/error_message.js"></script>
 <script src="/public/kronos/vue/plugins/plugin_grid.js"></script>
+<script src="/public/kronos/vue/plugins/plugin_settings.js"></script>
+<script src="/public/kronos/vue/plugins/settings/boolean_setting.js"></script>
+<script src="/public/kronos/vue/plugins/settings/string_setting.js"></script>
+<script src="/public/kronos/vue/plugins/settings/setting_group_header.js"></script>
+
 <script src="/public/kronos/vue/users/login.js"></script>
 
 <script src="/public/kronos/vue/server_records.js"></script>
