Added in error and success messages with transitions.

--- a/plugins/kronos/public/css/kronos.css
+++ b/plugins/kronos/public/css/kronos.css
@@ -101,6 +101,14 @@ a:hover, a:focus, a:active {
     float: right;
     cursor: pointer;
 }
+.fade-enter-active, .fade-leave-active {
+    transition: opacity .5s;
+}
+.fade-enter, .fade-leave-to  /* .fade-leave-active below version 2.1.8 */ {
+    opacity: 0;
+}
+
+
 .setting-group-heading hr {
     margin: 0 0 5px 0;
 }
