--- a/plugins/kronos/templates/plugins/plugin_settings.html
+++ b/plugins/kronos/templates/plugins/plugin_settings.html
@@ -5,8 +5,7 @@
         ^tmp_admin=shared=admin_main_navigation^
         <div class="col-sm-9">
             <div class="well">
-                <success-message></success-message>
-                <error-message></error-message>
+                ^tmp_admin=shared=messaging_bar^
                 <h2>Plugin Settings</h2>
                 <hr>
                 <plugin-settings :plugin-uid="pluginUid" :settings="settings"></plugin-settings>
