--- a/plugins/kronos/templates/footer.html
+++ b/plugins/kronos/templates/footer.html
@@ -1,4 +1,4 @@
     </div>
     </body>
 </html>
-^tmp_vue=script_loader^
+<script type="text/javascript" src="/public/kronos/dist/bundle.js"></script>
